# daily

./: .gitignore  .readthedocs.yaml  conf.py  index.rst  pyproject.toml  requirements.txt
docs/: plan.txt
docs/algorithm/: huffman-coding.md  index.rst
docs/daily/: index.rst
docs/daily/2023/: 0627.md  0717.md  index.rst
docs/gradle/: build-system.md  gradle-wrapper.md  index.rst  lifecycle.md  plugin.md  quick-start.md  task.md
docs/java/: arthas.md  immutable.md  immutable.slide.md  index.md  jackson.md  netty.md  stream.md
docs/java/http/: channel-pipeline.md  netty2.md  reactor-core.md  reactor-netty.md  socket.md
docs/java/unit-test/: easy-test.md  hello-world.md  index.md  junit.md  mock-db.md  mockito.md  spring-test.md
docs/kotlin/: collection.md  dataclass.md  delegate.md  enum-and-sealed.md  extension.md  index.rst  inline-and-generic.md  multiplatform.md  over.md  scope-func.md  type-system.md
docs/python/: index.rst  what-are-metaclasses-in-python-zh.md  what-are-metaclasses-in-python.md
docs/python/http/: asgi.md  http.md  socket.md
docs/spring/: basic.md  index.rst  production-ready-features.md  quick-start.md
docs/torch/: dataset.md  index.rst  llama.md  tensor.md
