[tool.poetry]
name = "daily"
version = "0.1.0"
description = ""
authors = ["zeroswan <zeroswan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.4.6"
myst-parser = "^3.0.1"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-design = "^0.6.0"
furo = "^2024.7.18"
jieba = "^0.42.1"
sphinxcontrib-jsmath = "^1.0.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
